--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "adviency",
   "private": true,
   "version": "0.0.0",
+  "description": "Vamos a hacer la misma aplicación 24 días seguidos, desde 0, agregando algo nuevo todos los días.\n\nTenemos que hacer una lista de regalos de navidad!",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
